--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,13 @@ platforms/
 plugins/
 plugins/android.json
 plugins/ios.json
-www/
 $RECYCLE.BIN/
+
+www/assets
+www/build
+www/index.html
+www/manifest.json
+www/service-worker.js
 
 .DS_Store
 Thumbs.db
