--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@ionic-native/core": "~4.18.0",
     "@ionic-native/fingerprint-aio": "^3.14.0",
     "@ionic-native/native-page-transitions": "^3.14.0",
-    "@ionic-native/splash-screen": "~4.18.0",
+    "@ionic-native/splash-screen": "^3.14.0",
     "@ionic-native/sqlite": "^3.14.0",
     "@ionic-native/sqlite-db-copy": "^4.20.0",
     "@ionic-native/status-bar": "~4.18.0",
@@ -35,7 +35,7 @@
     "cordova-plugin-fingerprint-aio": "1.6.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^3.1.2",
-    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "3.0.0",
@@ -55,7 +55,6 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
@@ -63,7 +62,8 @@
       "com.telerik.plugins.nativepagetransitions": {},
       "cordova-plugin-fingerprint-aio": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-dbcopy": {}
+      "cordova-plugin-dbcopy": {},
+      "cordova-plugin-splashscreen": {}
     },
     "platforms": [
       "android"
