--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/core": "~4.18.0",
     "@ionic-native/fingerprint-aio": "^3.14.0",
     "@ionic-native/native-page-transitions": "^3.14.0",
+    "@ionic-native/native-storage": "^3.14.0",
     "@ionic-native/splash-screen": "^3.14.0",
     "@ionic-native/sqlite": "^3.14.0",
     "@ionic-native/sqlite-db-copy": "^4.20.0",
@@ -30,15 +31,14 @@
     "@ionic/storage": "2.2.0",
     "com.telerik.plugins.nativepagetransitions": "0.6.5",
     "cordova-android": "7.1.4",
-    "cordova-plugin-dbcopy": "2.1.2",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-fingerprint-aio": "1.6.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^3.1.2",
+    "cordova-plugin-nativestorage": "2.3.2",
     "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "3.0.0",
     "ionic-angular": "3.9.3",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -61,9 +61,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "com.telerik.plugins.nativepagetransitions": {},
       "cordova-plugin-fingerprint-aio": {},
-      "cordova-sqlite-storage": {},
-      "cordova-plugin-dbcopy": {},
-      "cordova-plugin-splashscreen": {}
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-nativestorage": {}
     },
     "platforms": [
       "android"
