--- a/.gitignore
+++ b/.gitignore
@@ -28,12 +28,7 @@ plugins/
 plugins/android.json
 plugins/ios.json
 $RECYCLE.BIN/
-
-www/assets
-www/build
-www/index.html
-www/manifest.json
-www/service-worker.js
+www/
 
 .DS_Store
 Thumbs.db
