--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/fingerprint-aio": "^3.14.0",
     "@ionic-native/native-page-transitions": "^3.14.0",
     "@ionic-native/native-storage": "^3.14.0",
+    "@ionic-native/navigation-bar": "^3.14.0",
     "@ionic-native/splash-screen": "^3.14.0",
     "@ionic-native/sqlite": "^3.14.0",
     "@ionic-native/sqlite-db-copy": "^4.20.0",
