--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@ionic-native/sqlite-db-copy": "^4.20.0",
     "@ionic-native/status-bar": "~4.18.0",
     "@ionic/storage": "2.2.0",
+    "@ngx-translate/core": "^9.0.0",
+    "@ngx-translate/http-loader": "^2.0.0",
     "com.telerik.plugins.nativepagetransitions": "0.6.5",
     "cordova-android": "7.1.4",
     "cordova-plugin-device": "^2.0.2",
@@ -40,8 +42,10 @@
     "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "install": "^0.12.2",
     "ionic-angular": "3.9.3",
     "ionicons": "3.0.0",
+    "npm": "^6.8.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.29"
